remove PermSize option